# Server-Code

./: CMakeLists.txt  FYP_basic_GUI.ino  SquareLine_Project.sll  SquareLine_Project_events.py  gfx_conf.h  ui.c  ui.h  ui_Home.c  ui_breadrep.c  ui_brownrep.c  ui_cakerep.c  ui_cookrep.c  ui_cupcakesrep.c  ui_custom1rep.c  ui_custom2rep.c  ui_custom3rep.c  ui_events.c  ui_img_book_label_png.c  ui_img_bread_icon_png.c  ui_img_cake_icon_png.c  ui_img_cupcake_icon_png.c  ui_img_home_icon_png.c  ui_img_muffin_icon_png.c  ui_muffrep.c  ui_pancakesrep.c  ui_recipe.c
FYP_basic_GUI/: FYP_basic_GUI.ino
exp/: filelist.txt  ui.c  ui.h  ui_breadrep.c  ui_brownrep.c  ui_cakerep.c  ui_cookrep.c  ui_cupcakesrep.c  ui_events.c  ui_events.h  ui_img_add_circle_png.c  ui_img_chocolate_bar_icon_png.c  ui_img_confirm_icon_png.c  ui_img_cookie_half_icon_png.c  ui_img_kitchen_whisk_icon_png.c  ui_img_pancake_icon_png.c  ui_muffrep.c  ui_pancakesrep.c
